# ppt2pdf

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: Dockerfile  main.py  requirements.txt
backend/api/: models.py  routes.py
backend/core/: accessibility.py  ai_analyzer.py  pdf_generator.py  pptx_parser.py  structure_builder.py
backend/utils/: contrast_checker.py  image_utils.py
frontend/: index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: AccessibilityReport.tsx  AltTextEditor.tsx  FileUpload.tsx  ProgressIndicator.tsx  ReadingOrderEditor.tsx  SlidePreview.tsx
frontend/src/hooks/: useConversion.ts
frontend/src/types/: index.ts
src/: __init__.py  alt_text.py  analyzer.py  cli.py  config.py  converter.py  models.py  modifier.py  pipeline.py  validator.py
tests/: __init__.py  test_alt_text.py  test_analyzer.py  test_cli.py  test_config_models.py  test_converter.py  test_modifier.py  test_pipeline.py  test_validator.py
